data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1335.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\98\80\80\80\00\01\03\65\6e\76\10\69\6d"
    "\70\6f\72\74\65\64\46\75\6e\63\74\69\6f\6e\00\00"
    "\03\82\80\80\80\00\01\00\0a\92\80\80\80\00\01\8c"
    "\80\80\80\00\00\02\40\03\40\10\00\0c\00\0b\0b\0b"
  )
""
)